# full-stack-ai-agent-template

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: ci.yml
fastapi_gen/: cli.py  config.py  prompts.py
template/: VARIABLES.md  cookiecutter.json
template/hooks/: post_gen_project.py
template/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
template/{{cookiecutter.project_slug}}/backend/: .env.example  pyproject.toml
template/{{cookiecutter.project_slug}}/backend/app/: main.py
template/{{cookiecutter.project_slug}}/backend/app/api/: deps.py
template/{{cookiecutter.project_slug}}/backend/app/commands/: rag.py
template/{{cookiecutter.project_slug}}/backend/app/core/: config.py
template/{{cookiecutter.project_slug}}/backend/app/rag/: config.py  documents.py  ingestion.py  retrieval.py  vectorstore.py
template/{{cookiecutter.project_slug}}/backend/app/repositories/: conversation.py
template/{{cookiecutter.project_slug}}/backend/app/schemas/: rag.py  user.py
template/{{cookiecutter.project_slug}}/backend/app/services/: conversation.py  file_storage.py  file_upload.py
template/{{cookiecutter.project_slug}}/backend/tests/: test_migrations.py
template/{{cookiecutter.project_slug}}/backend/tests/api/: test_auth.py
template/{{cookiecutter.project_slug}}/frontend/: package.json
template/{{cookiecutter.project_slug}}/frontend/src/app/: global-error.tsx
template/{{cookiecutter.project_slug}}/frontend/src/hooks/: use-chat.ts  use-conversations.ts
template/{{cookiecutter.project_slug}}/frontend/src/lib/: rag-api.ts
template/{{cookiecutter.project_slug}}/frontend/src/types/: auth.ts
test_20/.github/workflows/: ci.yml
test_20/backend/: pyproject.toml
test_20/backend/alembic/versions/: 2026-03-20_add_missing_indexes.py  2026-03-20_add_rag_documents_table.py  2026-03-21_add_avatar_url_to_users.py
test_20/backend/app/: main.py
test_20/backend/app/api/routes/v1/: files.py  rag.py  users.py  webhooks.py
test_20/backend/app/commands/: rag.py
test_20/backend/app/core/: config.py  logging.py
test_20/backend/app/db/models/: rag_document.py  session.py  sync_log.py  user.py  webhook.py
test_20/backend/app/rag/: ingestion.py
test_20/backend/app/repositories/: conversation.py
test_20/backend/app/schemas/: rag.py  user.py
test_20/backend/app/services/: file_storage.py
test_20/backend/app/worker/tasks/: __init__.py  rag_tasks.py
test_20/frontend/: package.json
test_20/frontend/src/app/: globals.css  not-found.tsx
test_20/frontend/src/app/[locale]/: error.tsx
test_20/frontend/src/components/auth/: register-form.tsx
test_20/frontend/src/components/chat/: chat-container.tsx  conversation-sidebar.tsx  message-item.tsx
test_20/frontend/src/components/layout/: auth-guard.tsx  breadcrumb.tsx  header.tsx
test_20/frontend/src/hooks/: use-conversations.ts
test_20/frontend/src/lib/: rag-api.ts
test_20/frontend/src/types/: auth.ts
tests/: test_prompts.py  test_rag_config.py  test_rag_integration.py
(+32 files in other folders)
